base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-backend
  template:
    metadata:
      labels:
        app: internal-backend
    spec:
      containers:
      - name: server-backend
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - all
          privileged: false
          readOnlyRootFilesystem: true
        imagePullPolicy: Always
        image: backend-image-ref
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        tty: true
        restartPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: efs
          mountPath: /shared
      volumes:
      - name: efs
        persistentVolumeClaim:
          claimName: backend-service-efs
---
apiVersion: v1
kind: Service
metadata:
  name: internal-backend
spec:
  selector:
    app: internal-backend
  ports:
  - port: 80
    targetPort: 80
