base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  tls:
    - hosts:
        - example.com
      secretName: tls-example
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: internal-backend
            port: 
              number: 80
